Change Respond form

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
   id 'java'
   id 'org.springframework.boot' version '3.0.7'
   id 'io.spring.dependency-management' version '1.1.0'
+  id "org.flywaydb.flyway" version "9.8.1"
 }
 
 group = 'com.gic23'
@@ -20,7 +21,6 @@ repositories {
 
 dependencies {
       implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-      implementation 'org.springframework.boot:spring-boot-starter-security'
       implementation 'org.springframework.boot:spring-boot-starter-web'
       implementation 'org.flywaydb:flyway-core'
       implementation 'org.flywaydb:flyway-mysql'
@@ -29,7 +29,8 @@ dependencies {
       runtimeOnly 'com.mysql:mysql-connector-j'
       annotationProcessor 'org.projectlombok:lombok'
       testImplementation 'org.springframework.boot:spring-boot-starter-test'
-      testImplementation 'org.springframework.security:spring-security-test'
+      implementation 'org.springframework.security:spring-security-crypto'
+
 }
 
 
