--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
       annotationProcessor 'org.projectlombok:lombok'
       testImplementation 'org.springframework.boot:spring-boot-starter-test'
       implementation 'org.springframework.security:spring-security-crypto'
-
+      implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 }
 
 
